initial html and css scaffolding

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 			referrerpolicy="no-referrer"
 		/> -->
 		<link rel="stylesheet" href="style.css" />
-		<title>My Project</title>
+		<title>Progress Steps</title>
 	</head>
 	<body>
-		<h1>Project Starter</h1>
-		<script src="script.js"></script>
+		<div class="container">
+			<div class="progress-container">
+				<div class="progress" id="progress"></div>
+				<div class="circle active">I</div>
+				<div class="circle">II</div>
+				<div class="circle">III</div>
+				<div class="circle">IV</div>
+			</div>
+			<button class="btn" id="prev" disabled>Prev</button>
+			<button class="btn" id="next">Next</button>
+		</div>
 	</body>
 </html>
