javascript interactions and final styling touches

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 				<div class="circle">III</div>
 				<div class="circle">IV</div>
 			</div>
-			<button class="btn" id="prev" disabled>Prev</button>
+			<button class="btn" id="back" disabled>Back</button>
 			<button class="btn" id="next">Next</button>
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
